--- a/src/app/components/layout/common/UserPosts.scss
+++ b/src/app/components/layout/common/UserPosts.scss
@@ -58,7 +58,7 @@
         cursor: pointer;
         border-radius: 12px;
         max-height: 22vh;
-        max-width: 43vw;
+        max-width: 22vw;
       }
     }
     .floatingImg::before {
